src/k8s/session07/nginx-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-dep
spec:
  replicas: 3
  selector:
    matchLabels:
      app: sample
      tech: nginx
  template:
    metadata:
      labels:
        app: sample
        tech: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
spec:
  ports:
    - port: 8081
      targetPort: 80
      name: web
  selector:
    app: sample
    tech: nginx
  type: ClusterIP
