src/k8s/session07/svc-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-lb-svc
spec:
  ports:
    - port: 8000
      targetPort: 80
      name: web
  selector:
    app: sample
    tech: dotnet
  type: LoadBalancer
