src/k8s/session07/svc-nodeport-random.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-node-rnd-svc
spec:
  ports:
    - port: 9000
      targetPort: 80
      name: web
  selector:
    app: sample
    tech: dotnet
  type: NodePort
